--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
 @import "tailwindcss";
 
@@ -15,6 +16,10 @@
 body {
     font-family: var(--font-sans);
   }
+
+*{
+  font-family: Outfit;
+}
 
 
 @theme {
